fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ body {
 
 .flex-col-center {
   display: flex;
+  flex-flow: row wrap;
   align-items: center;
 }
 
